--- a/src/components/ui/Button/index.scss
+++ b/src/components/ui/Button/index.scss
@@ -1,6 +1,14 @@
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100px;
   height: 20px;
-  border: 1px solid black;
+  border: 1px solid transparent;
+  border-radius: 4px;
   box-sizing: border-box;
+  cursor: pointer;
+  user-select: none;
+  background-color: rgb(241, 226, 241);
+  color: rgb(128, 69, 128);
 }
