--- a/src/components/Cell/index.scss
+++ b/src/components/Cell/index.scss
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Oswald:wght@700&display=swap');
 
-.cell {
+.cell, .cell_disable {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100px;
   height: 100px;
-  background-color: rgb(241, 226, 241);
+  background-color: rgba(241, 226, 241);
+  opacity: .7;
   border-radius: 2px;
   cursor: pointer;
   user-select: none;
   margin: 1px;
   font-family: 'Major Mono Display', monospace;
+  &:hover {
+    opacity: 1;
+  }
+  &_disable{
+    opacity: 1;
+  }
 }
