--- a/src/components/Start/index.scss
+++ b/src/components/Start/index.scss
@@ -7,4 +7,10 @@
 .start_h1 {
   user-select: none;
   text-decoration: underline;
+  background: linear-gradient(rgb(133, 72, 133), rgb(236, 222, 222));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: red;
+  text-shadow: 0px 0px 30px rgb(255, 255, 255);
 }
