--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -7,7 +7,7 @@
   width: 500px;
   height: 500px;
   border: 1px solid transparent;
-  background-color: rgb(194, 159, 194);
+  background-color: rgba(194, 159, 194, 0.664);
   border-radius: 4px;
   font-family: 'Montserrat', sans-serif;
   box-shadow: 0px 0px 41px 3px rgb(119, 113, 121);
