--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,7 @@ body, html {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  background-color: pink;
+  background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png');
+  background-size: cover;
 }
