--- a/src/components/Main/index.scss
+++ b/src/components/Main/index.scss
@@ -1,3 +1,12 @@
+.main {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .main_field {
   display: flex;
   justify-content: space-around;
@@ -7,4 +16,5 @@
   width: 70%;
   height: 70%;
   box-shadow: -1px 2px 52px 8px rgba(0,0,0,0.75);
+  margin-bottom: 10px;
 }
