--- a/src/components/ui/Button/index.scss
+++ b/src/components/ui/Button/index.scss
@@ -11,11 +11,14 @@
   background: linear-gradient(45deg, rgb(177, 118, 177) 0%, rgb(236, 222, 222) 100%);
   border: none;
   color: rgb(236, 222, 222);
+  box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.719),
+              0px 0px 1px black;
 
   &:hover {
     animation: gradientAnimation .8s 1 ease-out;
     background: linear-gradient(45deg, rgb(177, 118, 177) 0%, rgb(236, 222, 222) 100%);
-    color: rgb(177, 118, 177);
+    color: rgb(128, 83, 128);
+    box-shadow:inset 2px 2px 10px white;
   }
 
   @keyframes gradientAnimation {
